--- a/WebContent/styles.css
+++ b/WebContent/styles.css
@@ -122,6 +122,8 @@ body{
 	color:#3f3f3f;
 	}
 
+
+
 h1{ color:#3f3f3f;
 	font-family: Visitor1, Verdana, Arial;
 	font-size:16pt;
@@ -218,7 +220,7 @@ h3{
 
 .buildTable tr {
 	color:#3f3f3f;
-	font-family: Visitor1, Verdana, Arial;
+	font-family:  Helvetica, Verdana, Arial;
 	font-size:14pt;
 }
 
@@ -243,7 +245,7 @@ h3{
 .selectedTable tr {
 	background-color:#e5e5e5;
 	color:#3f3f3f;
-	font-family: Visitor1, Verdana, Arial;
+	font-family: Helvetica, Verdana, Arial;
 	font-size:12pt;
 }
 
